@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atomic-write-file = "0.1.3"
 bio = "*"
 clap = { version = "4.4.0", features = ["derive"] }
